--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id=""calculator>
-        <input id = "display"> 
+        <input id = "display" readonly> 
         <div id = "keys">
             <button onclick="appendToDisplay('+')" class="operate-btn">+</button>
             <button onclick="appendToDisplay('7')">7</button>
@@ -23,6 +23,7 @@
             <button onclick="appendToDisplay('1')">1</button>
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
+            <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('/')" class="operate-btn">/</button>
             <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate('=')"> = </button>
